# kitstructlog

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
examples/: basic_usage.py  json_logging.py  multiple_loggers.py
src/kitstructlog/: main.py
tests/unit/: test_kitstructlog.py
